crates/math-core/tests/snapshots/wiki_test__wiki167.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\boldsymbol{\\iota \\kappa \\lambda \\mu \\nu \\xi \\omicron \\pi}"
---
<math>
    <mi>𝜾𝜿𝝀𝝁𝝂𝝃𝝄𝝅</mi>
</math>
