crates/math-core/tests/snapshots/wiki_test__wiki168.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\left ( \\frac{a}{b} \\right )"
---
<math>
    <mrow>
        <mo>(</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo>)</mo>
    </mrow>
</math>
