crates/math-core/tests/snapshots/wiki_test__wiki169.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\boldsymbol{\\varepsilon\\digamma\\varkappa \\varpi}"
---
<math>
    <mi>𝜺ϝ𝝒𝝕</mi>
</math>
