crates/math-core/tests/snapshots/wiki_test__wiki170.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\boldsymbol{\\varrho\\varsigma\\vartheta\\varphi}"
---
<math>
    <mpadded><mi>𝝔𝝇𝝑𝝋</mi></mpadded>
</math>
