crates/math-core/tests/snapshots/wiki_test__wiki171.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\mathit{0123456789}"
---
<math>
    <mpadded><mi>0123456789</mi></mpadded>
</math>
