crates/math-core/tests/snapshots/wiki_test__wiki173.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\mathit{\\Iota \\Kappa \\Lambda \\Mu \\Nu \\Xi \\Omicron \\Pi}"
---
<math>
    <mi>𝛪𝛫𝛬𝛭𝛮𝛯𝛰𝛱</mi>
</math>
