crates/math-core/tests/snapshots/wiki_test__wiki174.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\left / \\frac{a}{b} \\right \\backslash"
---
<math>
    <mrow>
        <mo stretchy="true" lspace="0" rspace="0">/</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo stretchy="true">\</mo>
    </mrow>
</math>
