crates/math-core/tests/snapshots/wiki_test__wiki178.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "( \\bigl( \\Bigl( \\biggl( \\Biggl( \\dots \\Biggr] \\biggr] \\Bigr] \\bigr] ]"
---
<math>
    <mo stretchy="false">(</mo>
    <mo minsize="1.2em" maxsize="1.2em">(</mo>
    <mo minsize="1.623em" maxsize="1.623em">(</mo>
    <mo minsize="2.047em" maxsize="2.047em">(</mo>
    <mo minsize="2.470em" maxsize="2.470em">(</mo>
    <mo lspace="0">.</mo>
    <mo lspace="0" rspace="0.1667em">.</mo>
    <mo lspace="0" rspace="0">.</mo>
    <mo minsize="2.470em" maxsize="2.470em">]</mo>
    <mo minsize="2.047em" maxsize="2.047em">]</mo>
    <mo minsize="1.623em" maxsize="1.623em">]</mo>
    <mo minsize="1.2em" maxsize="1.2em">]</mo>
    <mo stretchy="false">]</mo>
</math>
